try to fix flickering

--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -32,6 +32,7 @@
 				width: 100%;
 				border-radius: _size(border-radius);
 				overflow: hidden;
+				-webkit-transform-style: preserve-3d;
 
 				img {
 					display: block;
